--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
     "description": "A simple Node app built on Express, instantly up and running.",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js"
+        "start": "node server.js"
     },
     "dependencies": {
-      "express": "^4.18.2",
-      "socket.io": "^4.7.4"
+        "@influxdata/influxdb3-client": "^0.8.0",
+        "express": "^4.18.2",
+        "socket.io": "^4.7.4"
     },
     "engines": {
-      "node": "12.x"
+        "node": "12.x"
     },
     "repository": {
-      "url": "https://glitch.com/edit/#!/hello-express"
+        "url": "https://glitch.com/edit/#!/hello-express"
     },
     "license": "MIT",
     "keywords": [
-      "node",
-      "glitch",
-      "express"
+        "node",
+        "glitch",
+        "express"
     ]
-  }
+}
